--- a/react-app/src/assets/styles/App.css
+++ b/react-app/src/assets/styles/App.css
@@ -15,6 +15,21 @@
     text-align: center;
 }
 
+element.style {
+    border-left: red solid;
+    padding: 0.5em;
+    border-top: red solid;
+}
+
+.myCustomCalendar .react-calendar__tile--now {
+  border-top: solid red;
+  border-right: solid red;
+  background:white;
+  color:black;
+  font-weight:800;
+}
+
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
