--- a/react-app/src/assets/styles/App.css
+++ b/react-app/src/assets/styles/App.css
@@ -7,6 +7,47 @@
   pointer-events: none;
 }
 
+.react-calendar {
+  border-radius: 50px;
+  padding: 20px;
+}
+
+.react-calendar__navigation__label {
+  font-size: large;
+
+}
+
+.react-calendar__navigation__arrow, react-calendar__navigation__next-button {
+  font-size: 25px;
+  color: rgb(198, 34, 34);
+}
+
+.react-calendar__tile, react-calendar__tile--now react-calendar__tile--active react-calendar__tile--range, react-calendar__tile--rangeStart react-calendar__tile--rangeEnd, react-calendar__tile--rangeBothEnds, react-calendar__month-view__days__day {
+  border-radius: 10px;
+}
+
+.myCustomCalendar .react-calendar button {
+  margin: 5px 0;
+}
+
+.react-calendar__navigation__label__labelText--from {
+  font-family: 'Pacifico', cursive;
+}
+
+.react-calendar__month-view__weekdays__weekday abbr {
+  font-family: 'Pacifico', cursive;
+  font-weight: 400;
+  color: rgb(198, 34, 34);
+}
+
+.react-calendar__month-view__days button {
+  height: 60px;
+  display: flex;
+  padding: 0 5px;
+  margin: 10px;
+  justify-content: flex-end;
+}
+
 .text-center {
   text-align: center;
 }
