--- a/react-app/src/assets/styles/index.css
+++ b/react-app/src/assets/styles/index.css
@@ -1,9 +1,30 @@
+* {
+  font-family: 'Roboto';
+  /* font-family: "Pacifico", cursive;
+  font-weight: 400;
+  font-style: normal; */
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Times New Roman', Times,'Roboto', 'Pacifico', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgb(240, 240, 240);
+  height: 100%;
 }
+
+html {
+  height: 100%;
+  font-family: 'Times New Roman';
+}
+
+#root {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  font-family: 'Times New Roman';
+}
+
 
