--- a/react-app/src/assets/styles/App.css
+++ b/react-app/src/assets/styles/App.css
@@ -43,16 +43,23 @@
 
 .myCustomCalendar .react-calendar button {
   margin: 5px 0;
+
 }
 
 .react-calendar__navigation__label__labelText--from {
   font-family: 'Pacifico', cursive;
+  text-shadow: 1.5px 1.5px 0px rgb(223, 223, 223);
 }
 
 .react-calendar__month-view__weekdays__weekday abbr {
   font-family: 'Pacifico', cursive;
   font-weight: 400;
   color: rgb(198, 34, 34);
+}
+
+.myCustomCalendar .react-calendar__month-view__days__day--weekend {
+  border-left : white solid 2px;
+  border-right : white solid 2px;
 }
 
 .react-calendar__month-view__days button {
@@ -114,4 +121,10 @@ element.style {
   to {
     transform: rotate(360deg);
   }
+}
+
+/* media-queires pour l'affichage du tableau de film en bas de page */
+
+@media screen and (max-width: 1200px) {
+  
 }
