--- a/react-app/src/assets/styles/App.css
+++ b/react-app/src/assets/styles/App.css
@@ -23,6 +23,26 @@
   color: rgb(198, 34, 34);
 }
 
+.react-calendar__tile.react-calendar__tile--active,
+.react-calendar__tile.react-calendar__tile--active:enabled:hover,
+.react-calendar__tile.react-calendar__tile--active:enabled:focus
+{
+  color: unset;
+  background: unset;
+}
+.react-calendar__tile.react-calendar__month-view__days__day--weekend.react-calendar__tile,
+.react-calendar__tile.react-calendar__month-view__days__day--weekend.react-calendar__tile:enabled:hover,
+.react-calendar__tile.react-calendar__month-view__days__day--weekend.react-calendar__tile:enabled:focus
+{
+  color: unset;
+  background: #a7a7a7;
+  border-left: white solid 2px;
+  border-right: white solid 2px;
+}
+
+.react-calendar__tile, .react-calendar__tile--now, .react-calendar__tile--active, .react-calendar__tile--range, .react-calendar__tile--rangeStart, .react-calendar__tile--rangeEnd, .react-calendar__tile--rangeBothEnds, .react-calendar__month-view__days__day {
+  border-radius: 10px;
+}
 
 .myCustomCalendar .react-calendar button {
   margin: 5px 0;
