--- a/react-app/src/assets/styles/App.css
+++ b/react-app/src/assets/styles/App.css
@@ -1,3 +1,4 @@
+/* CSS Calendar */
 .App {
   text-align: center;
 }
@@ -14,33 +15,31 @@
 
 .react-calendar__navigation__label {
   font-size: large;
-
 }
 
-
-.react-calendar__navigation__arrow, react-calendar__navigation__next-button {
+.react-calendar__navigation__arrow {
   font-size: 25px;
   color: rgb(198, 34, 34);
 }
 
-.react-calendar__tile.react-calendar__tile--active,
 .react-calendar__tile.react-calendar__tile--active:enabled:hover,
-.react-calendar__tile.react-calendar__tile--active:enabled:focus
-{
+.react-calendar__tile.react-calendar__tile--active:enabled:focus {
   color: unset;
   background: unset;
 }
-.react-calendar__tile.react-calendar__month-view__days__day--weekend.react-calendar__tile,
+
 .react-calendar__tile.react-calendar__month-view__days__day--weekend.react-calendar__tile:enabled:hover,
-.react-calendar__tile.react-calendar__month-view__days__day--weekend.react-calendar__tile:enabled:focus
-{
+.react-calendar__tile.react-calendar__month-view__days__day--weekend.react-calendar__tile:enabled:focus {
   color: unset;
   background: #a7a7a7;
-  border-left: white solid 2px;
-  border-right: white solid 2px;
 }
 
-.react-calendar__tile, .react-calendar__tile--now, .react-calendar__tile--active, .react-calendar__tile--range, .react-calendar__tile--rangeStart, .react-calendar__tile--rangeEnd, .react-calendar__tile--rangeBothEnds, .react-calendar__month-view__days__day {
+.react-calendar__tile.react-calendar__tile--now:hover {
+  color: unset;
+  background: #e6e6e6 !important;
+}
+
+.react-calendar__month-view__days__day {
   border-radius: 10px;
 }
 
@@ -49,11 +48,11 @@
 }
 
 .react-calendar__navigation__label__labelText--from {
-  font-family: 'Pacifico', cursive;
+  font-family: "Pacifico", cursive;
 }
 
 .react-calendar__month-view__weekdays__weekday abbr {
-  font-family: 'Pacifico', cursive;
+  font-family: "Pacifico", cursive;
   font-weight: 400;
   color: rgb(198, 34, 34);
 }
@@ -70,25 +69,25 @@
   text-align: center;
 }
 
-.react-calendar__navigation{
-    text-align: center;
+.react-calendar__navigation {
+  text-align: center;
 }
 
 element.style {
-    border-left: red solid;
-    padding: 0.5em;
-    border-top: red solid;
+  border-left: red solid;
+  padding: 0.5em;
+  border-top: red solid;
 }
 
 .myCustomCalendar .react-calendar__tile--now {
   border-top: solid red;
   border-right: solid red;
-  background:white;
-  color:black;
-  font-weight:800;
+  background: white;
+  color: black;
+  font-weight: 800;
 }
 
-
+/* CSS de React Calendar */
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
