--- a/react-app/src/assets/styles/App.css
+++ b/react-app/src/assets/styles/App.css
@@ -22,18 +22,18 @@
   color: rgb(198, 34, 34);
 }
 
+.react-calendar__tile.react-calendar__tile--active,
 .react-calendar__tile.react-calendar__tile--active:enabled:hover,
 .react-calendar__tile.react-calendar__tile--active:enabled:focus {
   color: unset;
   background: unset;
 }
 
+.react-calendar__tile.react-calendar__month-view__days__day--weekend.react-calendar__tile,
 .react-calendar__tile.react-calendar__month-view__days__day--weekend.react-calendar__tile:enabled:hover,
 .react-calendar__tile.react-calendar__month-view__days__day--weekend.react-calendar__tile:enabled:focus {
   color: unset;
   background: #a7a7a7;
-
-  
 }
 
 .react-calendar__tile.react-calendar__tile--now:hover {
