feat : formulaires de creation d'evenement

--- a/react-app/src/Components/formulaire.css
+++ b/react-app/src/Components/formulaire.css
@@ -76,6 +76,7 @@ form {
   align-items: center;
   padding: 8px;
   height: 1rem;
+  font-size: small;
 }
 
 .anonyme {
@@ -89,144 +90,3 @@ form {
   display: block;
   padding: 10px;
 }
-
-/*
-
-  .box .text-wrapper {
-    color: #00000087;
-    font-family: "Inter-Medium", Helvetica;
-    font-size: 16px;
-    font-weight: 500;
-    left: 20px;
-    letter-spacing: 0;
-    line-height: normal;
-    position: absolute;
-    top: 25px;
-    white-space: nowrap;
-  }
-  
-  .box .div {
-    border-radius: 0px 50px 50px 0px;
-    height: 70px;
-    left: 235px;
-    position: absolute;
-    top: 0;
-    width: 65px;
-  }
-  
-  .box .rectangle {
-    background-color: #c62222;
-    border-radius: 0px 50px 50px 0px;
-    height: 70px;
-    left: 0;
-    opacity: 0.5;
-    position: absolute;
-    top: 0;
-    width: 65px;
-  }
-  
-  .box .text-wrapper-2 {
-    color: #ffffff;
-    font-family: "Inter-Regular", Helvetica;
-    font-size: 21px;
-    font-weight: 400;
-    left: 24px;
-    letter-spacing: 0;
-    line-height: normal;
-    position: absolute;
-    top: 22px;
-    white-space: nowrap;
-  }
-  
-  .box .titleBox {
-    color: #797979;
-    font-family: "Inter-Medium", Helvetica;
-    font-size: 20px;
-    font-weight: 500;
-    left: 154px;
-    letter-spacing: 0;
-    line-height: normal;
-    position: absolute;
-    top: 15px;
-    white-space: nowrap;
-  }
-  
-  .box .group-2 {
-    height: 85px;
-    left: 148px;
-    position: absolute;
-    top: 202px;
-    width: 108px;
-  }
-  
-  .box .overlap-2 {
-    height: 45px;
-    left: 0;
-    position: absolute;
-    top: 0;
-    width: 104px;
-  }
-  
-  .box .text-wrapper-3 {
-    color: #ffffff;
-    font-family: "Inter-Regular", Helvetica;
-    font-size: 21px;
-    font-weight: 400;
-    left: 45px;
-    letter-spacing: 0;
-    line-height: normal;
-    position: absolute;
-    top: 0;
-    white-space: nowrap;
-  }
-  
-  .box .rectangle-2 {
-    background-color: #c62222;
-    border-radius: 50px;
-    height: 40px;
-    left: 0;
-    position: absolute;
-    top: 5px;
-    width: 104px;
-  }
-  
-  .box .text-wrapper-4 {
-    color: #ffffff;
-    font-family: "Inter-Medium", Helvetica;
-    font-size: 16px;
-    font-weight: 500;
-    left: 24px;
-    letter-spacing: 0;
-    line-height: normal;
-    position: absolute;
-    top: 16px;
-    width: 56px;
-  }
-  
-  .box .group-3 {
-    height: 28px;
-    left: 3px;
-    position: absolute;
-    top: 57px;
-    width: 101px;
-  }
-  
-  .box .text-wrapper-5 {
-    color: #797979;
-    font-family: "Inter-Medium", Helvetica;
-    font-size: 14px;
-    font-weight: 500;
-    left: 0;
-    letter-spacing: 0;
-    line-height: normal;
-    position: absolute;
-    top: 4px;
-  }
-  
-  .box .checkbox {
-    height: 28px;
-    left: 651px;
-    position: absolute;
-    top: 459px;
-    width: 28px;
-  } */
