--- a/react-app/src/Pages/PageFormulaires.css
+++ b/react-app/src/Pages/PageFormulaires.css
@@ -1,5 +1,9 @@
 .container {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     flex-wrap: wrap;
+}
+
+h1 {
+    text-align: center;
 }
