mise en commun équipe

--- a/react-app/src/assets/styles/App.css
+++ b/react-app/src/assets/styles/App.css
@@ -45,6 +45,11 @@
   border-radius: 10px;
 }
 
+.react-calendar__tile.react-calendar__tile--active{
+  content: "Texte à ajouter";
+  color: black;
+}
+
 .myCustomCalendar .react-calendar button {
   margin: 5px 0;
 }
