--- a/react-app/src/Components/DetailsCard.css
+++ b/react-app/src/Components/DetailsCard.css
@@ -1,3 +1,9 @@
+* {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+}
+
 .container {
   display: flex;
   justify-content: center;
