--- a/react-app/src/assets/styles/App.css
+++ b/react-app/src/assets/styles/App.css
@@ -1,4 +1,12 @@
 /* CSS Calendar */
+.App {
+  text-align: center;
+}
+
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
 
 .react-calendar {
   border-radius: 50px;
@@ -33,11 +41,6 @@
   background: #e6e6e6 !important;
 }
 
-.react-calendar__tile.react-calendar__month-view__days__day--weekend:hover {
-  color: unset;
-  background: #e6e6e6 !important;
-}
-
 .react-calendar__month-view__days__day {
   border-radius: 10px;
 }
@@ -53,7 +56,6 @@
 
 .react-calendar__navigation__label__labelText--from {
   font-family: "Pacifico", cursive;
-  text-shadow: 2px 2px 0px rgb(206, 206, 206);
 }
 
 .react-calendar__month-view__weekdays__weekday abbr {
@@ -90,9 +92,40 @@ element.style {
 }
 
 .myCustomCalendar .react-calendar__tile--now {
-  border-top: solid red;
-  border-right: solid red;
+  border-top: solid rgb(0, 0, 0);
+  border-right: solid rgb(0, 0, 0);
   background: white;
   color: black;
   font-weight: 800;
+}
+
+/* CSS de React Calendar */
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.App-link {
+  color: #61dafb;
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
