--- a/react-app/src/assets/styles/index.css
+++ b/react-app/src/assets/styles/index.css
@@ -22,7 +22,7 @@ html {
   height: 100%;
 }
 
-/* media-queires pour l'affichage du tableau de film en bas de page */
+/* media-queries pour l'affichage du tableau de film en bas de page */
 
 @media screen and (min-width: 600px) {
   .myCustomCalendar .react-calendar {
