--- a/react-app/src/assets/styles/reserve.css
+++ b/react-app/src/assets/styles/reserve.css
@@ -1,15 +1,15 @@
 .react-calendar__tile.reserved {
-    position: relative;
-    border: red solid 5px;
-    border-radius: 10px;
+  position: relative;
+  border: red solid 5px;
+  border-radius: 10px;
 }
 
 .react-calendar__tile.reserved::after {
-    /* 🥐​;    */
-    content: '\1F950';
-    position: absolute;
-    display: block;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+  /* 🥐​;    */
+  content: "\1F950";
+  position: absolute;
+  display: block;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
