--- a/react-app/src/assets/styles/App.css
+++ b/react-app/src/assets/styles/App.css
@@ -38,16 +38,11 @@
 
 .react-calendar__tile.react-calendar__tile--now:hover {
   color: unset;
-  background: #e6e6e6 !important;
+  background: #e6e6e6;
 }
 
 .react-calendar__month-view__days__day {
   border-radius: 10px;
-}
-
-.react-calendar__tile.react-calendar__tile--active{
-  content: "Texte à ajouter";
-  color: black;
 }
 
 .myCustomCalendar .react-calendar button {
