--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -1,7 +1,8 @@
+
 .App {
   text-align: center;
 }
-
+/*
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -36,3 +37,4 @@
     transform: rotate(360deg);
   }
 }
+*/
