--- a/react-app/src/styles/login.css
+++ b/react-app/src/styles/login.css
@@ -1,4 +1,10 @@
-css formulaire
+/* css formulaire */
+
+.App {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
  
 .main-container {
   display: flex;
