--- a/react-app/src/assets/styles/index.css
+++ b/react-app/src/assets/styles/index.css
@@ -1,4 +1,4 @@
-* {
+/* * {
   font-family: "Roboto";
 }
 
@@ -20,4 +20,25 @@ html {
   justify-content: center;
   align-items: center;
   height: 100%;
+} */
+
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+}
+
+.app {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
