--- a/react-app/src/Components/loginForm.css
+++ b/react-app/src/Components/loginForm.css
@@ -10,7 +10,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
+  /* min-height: 100vh; */
 }
  
 .form-container {
