--- a/react-app/src/NewAccount/NewAccount.css
+++ b/react-app/src/NewAccount/NewAccount.css
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
+  /* min-height: 100vh; */
 }
 
 .form-container {
