--- a/react-app/src/Components/loginForm.css
+++ b/react-app/src/Components/loginForm.css
@@ -10,11 +10,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
 }
  
 .form-container {
-  border: 2px solid red;
+  border: 2px solid rgb(198,34,34);
   padding: 20px;
   border-radius: 10px;
   width: 300px;
@@ -43,7 +42,7 @@
 }
  
 .form-container button {
-  background-color: red;
+  background-color: rgb(198,34,34);
   color: white;
   padding: 8px;
   border: none;
@@ -62,5 +61,16 @@
 
 .mot_passe_oublie {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: center;    
+}
+
+#style_link {
+  text-decoration: none;
+  color: rgb(198,34,34);
+  font-weight: bold;
+}
+
+#style_link:hover {
+  text-decoration: underline;
 }
